1. disable debug mode 2. some comment 3. remove knockout instead by asp code coz not fit it 4. fixed the price bug. it should be double not int. 5. update css file

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,4 +1,11 @@
-﻿.modalBackground{background-color:Gray;filter: alpha(opacity=70);opacity: 0.7}
+﻿.modalBackground{
+    background-color:grey;
+    filter: alpha(opacity=70);
+    opacity: 0.9;
+}
+.mymodal {
+    background-color:azure;
+}
 /* for my date picker */
 .ui-datepicker {
     background: #333;
